# Chroma-RayTracer

./: .gitignore  ACCIDENTALART.html  ACCIDENTALART.md  AccidentalArt.md  CMakeLists.txt  README.md  _config.yml
assets/css/: style.scss
assets/scenes/: spheres.xml
assets/scenes/additional/: cornellbox.xml  dragons.xml
assets/scenes/hw1/: cornellbox.xml  scienceTree.xml
assets/scenes/hw2/: cornellbox_recursive.xml  glass_dragon.xml  other_dragon.xml  scienceTree.xml  spheres.xml
assets/scenes/hw3/: cornellbox_boxes.xml  dragon_dynamic.xml  ellipsoids.xml  spheres_dof.xml
assets/scenes/hw3/additional/: dragons.xml
assets/scenes/hw3/hw3/: cornellbox_boxes_dynamic.xml  cornellbox_brushed_metal.xml  metal_glass_plates.xml  simple_transform.xml  tap_0200.xml
assets/scenes/hw4/: .ellipsoids_texture.xml.swp  bump_mapping_transformed.xml  cube_cushion.xml  cube_perlin.xml  cube_perlin_bump.xml  cube_wall.xml  cube_wall_normal.xml  cube_waves.xml  ellipsoids_texture.xml  galactica_dynamic.xml  galactica_static.xml  sphere_nearest_bilinear.xml  sphere_nobump_bump.xml  sphere_nobump_justbump.xml  sphere_normal.xml  sphere_perlin.xml  sphere_perlin_bump.xml  sphere_perlin_scale.xml
assets/scenes/hw5/: cornellbox_area.xml  cube_point_hdr.exr  cube_point_hdr.xml  head_env_light.exr  head_env_light.xml  sphere_point_hdr_texture.exr  sphere_point_hdr_texture.xml
assets/scenes/hw5/veach_ajar/: LICENSE.txt  scene.xml
assets/scenes/hw6/: brdf_blinnphong_modified.xml  brdf_blinnphong_modified_normalized.xml  brdf_blinnphong_original.xml  brdf_phong_modified.xml  brdf_phong_modified_normalized.xml  brdf_phong_original.xml  brdf_torrancesparrow.exr  brdf_torrancesparrow.xml  killeroo_blinnphong.exr  killeroo_blinnphong_closeup.exr  killeroo_torrancesparrow.exr  killeroo_torrancesparrow_closeup.exr
assets/scenes/hw7/directLighting/: cornellbox_jaroslav_diffuse.exr  cornellbox_jaroslav_diffuse.xml  (+12 more)
assets/screenshots/: cornellbox_area.exr  cornellbox_jaroslav_diffuse.exr  cornellbox_jaroslav_diffuse_area.exr  cornellbox_jaroslav_glossy.exr  cornellbox_jaroslav_glossy_area.exr  cornellbox_jaroslav_glossy_area_ellipsoid.exr  cornellbox_jaroslav_glossy_area_small.exr  cornellbox_jaroslav_glossy_area_sphere.exr  cube_point_hdr.exr  head_env_light.exr  killeroo_blinnphong.exr  killeroo_blinnphong_closeup.exr  sphere_point_hdr_texture.exr
assets/screenshots/directLighting/: cornellbox_jaroslav_diffuse.exr  cornellbox_jaroslav_glossy_area_sphere.exr
assets/screenshots/pathTracing/: diffuse.exr  diffuse_next.exr  diffuse_next_importance.exr  diffuse_next_importance_russian.exr  diffuse_next_russian.exr  glass.exr  glass_next_importance_russian.exr  glass_russian.exr
assets/shaders/: phong.frag
resources/: brdf_torrancesparrow.exr  killeroo_torrancesparrow.exr  killeroo_torrancesparrow_closeup.exr  new logo.drawio
resources/directLighting/: cornellbox_jaroslav_diffuse_area.exr  cornellbox_jaroslav_glossy.exr  cornellbox_jaroslav_glossy_area.exr  cornellbox_jaroslav_glossy_area_ellipsoid.exr  cornellbox_jaroslav_glossy_area_small.exr
resources/pathTracing/: diffuse_importance.exr  diffuse_importance_russian.exr  diffuse_russian.exr  glass_importance.exr  glass_importance_russian.exr  glass_next.exr  glass_next_importance.exr  glass_next_russian.exr
src/ray-tracer/accelerationStructures/: AccelerationStructure.h  BBoxAcceleration.h  BVH.cpp  BVH.h  Memory.cpp  Memory.h
src/ray-tracer/editor/: AssetImporter.cpp  AssetImporter.h  Buffer.h  Editor.cpp  Editor.h  ImGuiDrawable.h  Logger.cpp  Logger.h  Observer.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  imgui_impl_glfw_gl3.cpp
src/ray-tracer/main/: BRDF.h  BVH.cpp  BVH.h  Camera.cpp  Camera.h  EntryPoint.cpp  Geometry.cpp  Geometry.h  Image.cpp  Image.h  ImageTextureMap.cpp  ImageTextureMap.h  Light.h  Material.h  NoiseTextureMap.cpp  NoiseTextureMap.h  ObjectLight.h  ProceduralTextureMap.cpp  ProceduralTextureMap.h  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Shape.h  Texture.cpp  Texture.h  TextureMap.cpp  TextureMap.h  Utilities.h  Window.cpp  Window.h
src/ray-tracer/openGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLVertexArrayObject.cpp  OpenGLVertexArrayObject.h
(+20 files in other folders)
